# ffi-plugin-with-ffi-native

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: my_plugin.podspec
lib/: my_plugin.dart  my_plugin_bindings_generated.dart
linux/: CMakeLists.txt
macos/: my_plugin.podspec
macos/Classes/: my_plugin.c
src/: CMakeLists.txt  my_plugin.c
windows/: CMakeLists.txt
